# kandidat-demo

./: .gitignore  README.md  build.py  pyproject.toml  requirements.txt
rust/: Cargo.toml
rust/src/: lib.rs
src/: main.py  windows.py
src/kandidat_demo_rust/: __init__.py
