[package]
name = "kandidat-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kandidat_demo_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"

[profile.release]
strip = true
lto = true
codegen-units = 1
